# webtesterpro

./: .gitignore  BAO_CAO_WEBTESTERPRO.md
webtesterpro/: .env.example  README.md  alembic.ini  config.yaml  pyproject.toml  requirements.txt
webtesterpro/alembic/: env.py
webtesterpro/alembic/versions/: 001_create_users_and_reports.py  002_add_report_status_fields.py  003_add_progress_fields.py  004_add_audit_scheduled_share.py  005_add_scheduled_share.py
webtesterpro/data/: webtesterpro.db
webtesterpro/webtesterpro/: __init__.py  __main__.py  database.py  main.py
webtesterpro/webtesterpro/auth/: __init__.py  auth.py  crud.py  dependencies.py  models.py  router.py  schemas.py
webtesterpro/webtesterpro/cli/: __init__.py  main.py
webtesterpro/webtesterpro/core/: __init__.py  config.py  engine.py
webtesterpro/webtesterpro/dashboard/: __init__.py  constants.py  dependencies.py  main.py
webtesterpro/webtesterpro/dashboard/services/: __init__.py  analytics_service.py  audit_service.py  compare_service.py  export_service.py  sse_manager.py  test_runner.py
webtesterpro/webtesterpro/dashboard/static/: sw.js
webtesterpro/webtesterpro/dashboard/utils/: __init__.py  results_parser.py
webtesterpro/webtesterpro/models/: __init__.py  user.py
webtesterpro/webtesterpro/modules/: __init__.py
webtesterpro/webtesterpro/modules/accessibility/: __init__.py  accessibility_checker.py
webtesterpro/webtesterpro/modules/analyzer/: __init__.py  analyzer.py
webtesterpro/webtesterpro/tests/: __init__.py  conftest.py
webtesterpro/webtesterpro/utils/: __init__.py
(+29 files in other folders)
